--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -6,13 +6,58 @@
     android:layout_height="match_parent"
     android:background="@color/background"
     tools:context=".ui.home.HomeFragment"
-    android:orientation="horizontal">
+    android:orientation="vertical">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/background"
+        android:orientation="horizontal"
+        tools:context=".ui.home.HomeFragment"
+        android:gravity="center">
+
+        <Button
+            android:id="@+id/btnToday"
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="5dp"
+            android:text="Today"
+            android:textAllCaps="false" />
+
+        <Button
+            android:id="@+id/btnImportant"
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
+            android:text="Important"
+            android:textAllCaps="false" />
+
+    </LinearLayout>
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/background"
+        android:orientation="horizontal"
+        tools:context=".ui.home.HomeFragment"
+        android:gravity="center">
+
+        <Button
+            android:id="@+id/btnAdd"
+            android:layout_width="113dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="0dp"
+            android:text="Add task"
+            android:textAllCaps="false" />
+
+    </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewTasks"
         android:layout_height="match_parent"
         android:layout_width="wrap_content"
-        android:layout_marginTop="-60dp"
+        android:layout_marginTop="20dp"
         android:layout_marginRight="16dp"
         android:layout_marginLeft="16dp">
 
