--- a/app/src/main/res/layout/task.xml
+++ b/app/src/main/res/layout/task.xml
@@ -59,12 +59,13 @@
     </LinearLayout>
 
     <LinearLayout
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="40dp"
         android:layout_width="35dp"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal">
 
-        <ImageButton
-            android:id="@+id/imgbtnImportant"
+        <ImageView
+            android:id="@+id/ivImportant"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
