complete add task

--- a/app/src/main/res/layout/activity_add_task.xml
+++ b/app/src/main/res/layout/activity_add_task.xml
@@ -4,13 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.task.AddTaskActivity">
+    tools:context=".ui.task.AddTaskActivity"
+    >
 
     <TextView
         android:id="@+id/tvTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="36dp"
+        android:layout_marginStart="28dp"
         android:layout_marginTop="84dp"
         android:text="Add task"
         android:textSize="18sp"
@@ -21,8 +22,8 @@
         android:id="@+id/etTaskName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="36dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginStart="28dp"
+        android:layout_marginTop="28dp"
         android:ems="10"
         android:hint="Task name"
         android:inputType="textPersonName"
@@ -33,7 +34,7 @@
         android:id="@+id/tvChooseDate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="24dp"
         android:drawableLeft="@drawable/calendar"
         android:text="  Choose date"
         android:textSize="18sp"
@@ -44,8 +45,8 @@
 
     <Button
         android:id="@+id/btnChooseTag"
-        android:layout_width="90dp"
-        android:layout_height="36dp"
+        android:layout_width="100dp"
+        android:layout_height="37dp"
         android:layout_marginStart="28dp"
         android:layout_marginTop="24dp"
         android:text="Choose tag"
@@ -54,22 +55,21 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/etTaskName" />
 
-    <ScrollView
-        android:id="@+id/svSelectedTags"
-        android:layout_width="275dp"
-        android:layout_height="26dp"
-        android:layout_marginStart="12dp"
-        android:layout_marginTop="32dp"
-        android:orientation="horizontal"
+    <HorizontalScrollView
+        android:layout_width="269dp"
+        android:layout_height="33dp"
+        android:layout_marginStart="13dp"
+        android:layout_marginTop="24dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/btnChooseTag"
         app:layout_constraintTop_toBottomOf="@+id/etTaskName">
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:orientation="horizontal">
+            android:orientation="vertical"
+            android:gravity="center">
 
             <TextView
                 android:id="@+id/tvSelectedTags"
@@ -77,6 +77,30 @@
                 android:layout_height="match_parent"
                 android:textSize="18sp" />
         </LinearLayout>
-    </ScrollView>
+    </HorizontalScrollView>
+
+    <CheckBox
+        android:id="@+id/chkImportant"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="12dp"
+        android:text="Important"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.088"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvChooseDate" />
+
+    <Button
+        android:id="@+id/btnAddTask"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="Add"
+        android:textAllCaps="false"
+        android:textSize="12sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.088"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/chkImportant" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
