--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -54,18 +54,16 @@
     </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
+        android:gravity="center"
         android:id="@+id/recyclerViewTasks"
         android:layout_height="match_parent"
         android:layout_width="wrap_content"
         android:layout_marginTop="20dp"
         android:layout_marginRight="16dp"
-        android:layout_marginLeft="16dp">
+        android:layout_marginLeft="16dp"
+        android:layout_marginBottom="30dp">
 
     </androidx.recyclerview.widget.RecyclerView>
 
-<!--    <ListView-->
-<!--        android:id="@+id/lvContact"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="match_parent" />-->
 
 </LinearLayout>
