--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,5 @@
     <color name="textTaskName">#554E8F</color>
     <color name="textTaskDate">#C6C6C8</color>
     <color name="important">#FFDC00</color>
+    <color name="notimportant">#D9D9D9</color>
 </resources>
