--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,10 @@
     <color name="shadow">#BBBBBB</color>
     <color name="textTaskName">#554E8F</color>
     <color name="textTaskDate">#C6C6C8</color>
+    <color name="colorPrimary">#008577</color>
+    <color name="colorPrimaryDark">#00574B</color>
+    <color name="colorAccent">#D81B60</color>
+    <color name="round_button_color">#D3D3D3</color>
+    <color name="round_gradient_button_start_color">#79CBCA</color>
+    <color name="round_gradient_button_end_color">#77A1D3 </color>
 </resources>
