--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -14,29 +14,11 @@
         android:layout_height="wrap_content">
 
         <com.google.android.material.checkbox.MaterialCheckBox
-            android:id="@+id/chkComplete"
+            android:id="@+id/chkDone"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
         </com.google.android.material.checkbox.MaterialCheckBox>
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_marginTop="32dp"
-        android:layout_width="100dp"
-        android:layout_height="wrap_content">
-
-        <TextView
-            android:id="@+id/tvDate"
-            android:textSize="16sp"
-            android:textColor="@color/textTaskDate"
-            android:layout_marginTop="8dp"
-            android:text="25/12/2020"
-            android:gravity="right"
-            android:textAlignment="gravity"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
 
     </LinearLayout>
 
@@ -46,12 +28,12 @@
         android:layout_height="wrap_content">
 
         <TextView
-            android:id="@+id/tvNameTask"
+            android:id="@+id/tvNameItem"
             android:textSize="18sp"
             android:textColor="@color/textTaskName"
             android:layout_marginTop="8dp"
             android:layout_marginLeft="8dp"
-            android:text="name task"
+            android:text="name item"
             android:gravity="left"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
@@ -59,16 +41,44 @@
     </LinearLayout>
 
     <LinearLayout
-        android:layout_marginTop="30dp"
-        android:layout_width="35dp"
-        android:layout_height="wrap_content">
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp">
 
-        <ImageButton
-            android:id="@+id/btnAddItem"
+        <Button
+            android:id="@+id/btnRename"
+            style="@style/Widget.AppCompat.Button.Borderless"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_weight="1"
-            app:srcCompat="@drawable/star" />
+            android:text="Rename"
+            android:textAlignment="viewEnd"
+            android:textAllCaps="false"
+            android:textColor="#4F5053"
+            android:textSize="10sp"
+            app:backgroundTint="#08FFFFFF" />
+        />
     </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp">
+
+        <Button
+            android:id="@+id/btnDelete"
+            style="@style/Widget.AppCompat.Button.Borderless"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:text="Delete"
+            android:textAlignment="viewStart"
+            android:textAllCaps="false"
+            android:textColor="#4F5053"
+            android:textSize="10sp"
+            app:backgroundTint="#08FFFFFF" />
+        />
+    </LinearLayout>
+
 
 </LinearLayout>
