--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -26,6 +26,7 @@
             android:layout_marginTop="20dp"/>
 
         <EditText
+            android:id="@+id/etSearchTask"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_marginLeft="20dp"
