--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -1,42 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:background="@drawable/backgroundtask"
-    android:orientation="horizontal"
+    android:layout_height="100dp"
     android:layout_marginBottom="20dp"
-    android:layout_height="100dp">
+    android:background="@drawable/backgroundtask"
+    android:orientation="horizontal">
 
     <LinearLayout
-        android:layout_marginTop="30dp"
         android:layout_width="30dp"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp">
 
         <com.google.android.material.checkbox.MaterialCheckBox
             android:id="@+id/chkDone"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="match_parent"
+            android:checked="false"
+            android:clickable="true">
 
         </com.google.android.material.checkbox.MaterialCheckBox>
 
     </LinearLayout>
 
     <LinearLayout
-        android:layout_marginTop="30dp"
         android:layout_width="200sp"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp">
 
         <TextView
             android:id="@+id/tvNameItem"
-            android:textSize="18sp"
-            android:textColor="@color/textTaskName"
-            android:layout_marginTop="8dp"
-            android:layout_marginLeft="8dp"
-            android:text="name item"
-            android:gravity="left"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="8dp"
+            android:layout_marginTop="8dp"
+            android:gravity="left"
+            android:text="name item"
+            android:textColor="@color/textTaskName"
+            android:textSize="18sp" />
 
     </LinearLayout>
 
