--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -5,25 +5,26 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background"
-    tools:context=".ui.home.HomeFragment"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:context=".ui.home.HomeFragment">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/gradient_background"
+        android:gravity="center"
         android:orientation="vertical"
-        tools:context=".ui.home.HomeFragment"
-        android:gravity="center">
+        tools:context=".ui.home.HomeFragment">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/app_name"
-            android:textColor="@color/white"
-            android:textSize="26dp"
             android:layout_gravity="left"
             android:layout_marginLeft="20dp"
-            android:layout_marginTop="20dp"/>
+            android:layout_marginTop="20dp"
+            android:text="@string/app_name"
+            android:textColor="@color/white"
+            android:textSize="26dp" />
 
         <EditText
             android:id="@+id/etSearchTask"
@@ -47,58 +48,39 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
         android:background="@color/background"
         android:orientation="horizontal"
-        tools:context=".ui.home.HomeFragment"
-        android:gravity="center"
-        android:layout_marginTop="5dp">
+        tools:context=".ui.home.HomeFragment">
 
-        <Button
-            android:id="@+id/btnToday"
-            android:layout_width="150dp"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="5dp"
-            android:text="Today"
-            android:textAllCaps="false" />
-
-        <Button
-            android:id="@+id/btnImportant"
-            android:layout_width="150dp"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="5dp"
-            android:text="Important"
-            android:textAllCaps="false" />
-
-    </LinearLayout>
-
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/background"
-        android:orientation="horizontal"
-        tools:context=".ui.home.HomeFragment"
-        android:gravity="center">
-
+        <Spinner
+            android:id="@+id/spinnerTypeTask"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="16dp"/>
+        <View
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_weight="1"/>
         <Button
             android:id="@+id/btnAdd"
             android:layout_width="113dp"
             android:layout_height="wrap_content"
-            android:layout_margin="0dp"
+            android:layout_marginRight="26dp"
             android:text="Add task"
-            android:textAllCaps="false" />
-
+            android:textAllCaps="false"
+            android:layout_gravity="right"/>
     </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
-        android:gravity="center"
         android:id="@+id/recyclerViewTasks"
-        android:layout_height="match_parent"
         android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_marginLeft="16dp"
         android:layout_marginTop="20dp"
         android:layout_marginRight="16dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginBottom="30dp">
+        android:layout_marginBottom="30dp"
+        android:gravity="center">
 
     </androidx.recyclerview.widget.RecyclerView>
 
