--- a/app/src/main/res/layout/line_item_grocery.xml
+++ b/app/src/main/res/layout/line_item_grocery.xml
@@ -26,4 +26,13 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         android:text="xoa" />
+    <Button
+        android:id="@+id/line_item_grocery_btnEdit"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintRight_toLeftOf="@id/line_item_grocery_btnXoa"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginRight="10dp"
+        android:text="Edit" />
 </androidx.constraintlayout.widget.ConstraintLayout>
