--- a/app/src/main/res/layout/line_item_grocery.xml
+++ b/app/src/main/res/layout/line_item_grocery.xml
@@ -25,7 +25,7 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:text="xoa" />
+        android:text="Delete" />
     <Button
         android:id="@+id/line_item_grocery_btnEdit"
         android:layout_width="wrap_content"
