--- a/app/src/main/res/layout/activity_grocery.xml
+++ b/app/src/main/res/layout/activity_grocery.xml
@@ -15,7 +15,7 @@
         android:text="Grocery List"
         android:textSize="24sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@id/txtShow"
+        app:layout_constraintBottom_toTopOf="@id/rvGroceryList"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -26,7 +26,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/txtShow"
+        app:layout_constraintTop_toBottomOf="@id/rvGroceryList"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp">
         <EditText
@@ -47,7 +47,7 @@
     </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/txtShow"
+        android:id="@+id/rvGroceryList"
         android:layout_width="408dp"
         android:layout_height="407dp"
         app:layout_constraintBottom_toBottomOf="@id/bottomContainer"
@@ -63,7 +63,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@id/txtName"
-        app:layout_constraintBottom_toTopOf="@id/txtShow"
+        app:layout_constraintBottom_toTopOf="@id/rvGroceryList"
         android:layout_marginTop="45dp"
         android:orientation="horizontal"
         android:layoutDirection="rtl">
