--- a/app/src/main/res/layout/activity_grocery.xml
+++ b/app/src/main/res/layout/activity_grocery.xml
@@ -30,7 +30,7 @@
         android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp">
         <EditText
-            android:id="@+id/edtAdd"
+            android:id="@+id/etAdd"
             android:layout_width="320dp"
             android:layout_height="48dp"
             android:ems="10"
@@ -77,7 +77,7 @@
             android:textColor="#FFFFFF"/>
 
         <EditText
-            android:id="@+id/edtSearch"
+            android:id="@+id/etSearch"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
