view task by tag

--- a/app/src/main/res/layout/activity_tag.xml
+++ b/app/src/main/res/layout/activity_tag.xml
@@ -53,9 +53,10 @@
         android:layout_width="349dp"
         android:layout_height="53dp"
         android:ems="10"
-        android:inputType="textPersonName"
-        android:textColor="#D5CFCF"
         android:hint="Search"
+        android:inputType="textPersonName"
+        android:textColor="@color/black"
+        android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.483"
