--- a/app/src/main/res/layout/activity_update_tag.xml
+++ b/app/src/main/res/layout/activity_update_tag.xml
@@ -20,32 +20,36 @@
 
     <EditText
         android:id="@+id/txtName"
-        android:layout_width="357dp"
-        android:layout_height="50dp"
+        android:layout_width="349dp"
+        android:layout_height="46dp"
         android:ems="10"
         android:inputType="textPersonName"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.435"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.167" />
 
     <Button
         android:id="@+id/btnUpdate"
-        android:layout_width="224dp"
+        android:layout_width="167dp"
         android:layout_height="70dp"
         android:text="Update Tag"
-        android:textSize="24sp"
-        app:backgroundTint="?android:attr/textColorLinkInverse"
+        android:textColor="@color/colorPrimaryDark"
+        android:textSize="18sp"
+        app:backgroundTint="?android:attr/textColorLink"
+        app:icon="@android:drawable/ic_menu_save"
+        app:iconTint="@color/colorPrimaryDark"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintHorizontal_bias="0.118"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.848" />
+        app:layout_constraintVertical_bias="0.851" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recycleViewTask"
+        android:id="@+id/recycleViewTasksByTag"
         android:layout_width="352dp"
         android:layout_height="264dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -54,5 +58,24 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.498" />
+
+    <Button
+        android:id="@+id/btnDelete"
+        android:layout_width="167dp"
+        android:layout_height="70dp"
+        android:fontFamily="sans-serif-medium"
+        android:text="Delete Tag"
+        android:textColor="@color/white"
+        android:textSize="18sp"
+        app:backgroundTint="@android:color/holo_red_dark"
+        app:icon="@android:drawable/ic_menu_delete"
+        app:iconTint="@color/white"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.877"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.851" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
