--- a/app/src/main/res/layout/activity_item_update.xml
+++ b/app/src/main/res/layout/activity_item_update.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.item.ItemUpdate">
+    tools:context=".ui.item.ItemUpdateActivity">
 
     <TextView
         android:id="@+id/tvTitile"
