--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -24,14 +24,14 @@
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="200sp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp">
 
         <TextView
             android:id="@+id/tvNameItem"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_marginLeft="8dp"
             android:layout_marginTop="8dp"
             android:gravity="left"
@@ -40,14 +40,17 @@
             android:textSize="18sp" />
 
     </LinearLayout>
-
+    <View
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_weight="1" />
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp">
 
         <Button
-            android:id="@+id/btnRename"
+            android:id="@+id/btnRenameItem"
             style="@style/Widget.AppCompat.Button.Borderless"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
@@ -56,18 +59,11 @@
             android:textAlignment="viewEnd"
             android:textAllCaps="false"
             android:textColor="#4F5053"
-            android:textSize="10sp"
+            android:textSize="14sp"
             app:backgroundTint="#08FFFFFF" />
-        />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="30dp">
 
         <Button
-            android:id="@+id/btnDelete"
+            android:id="@+id/btnDeleteItem"
             style="@style/Widget.AppCompat.Button.Borderless"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
@@ -76,10 +72,10 @@
             android:textAlignment="viewStart"
             android:textAllCaps="false"
             android:textColor="#4F5053"
-            android:textSize="10sp"
+            android:textSize="14sp"
             app:backgroundTint="#08FFFFFF" />
-        />
     </LinearLayout>
+
 
 
 </LinearLayout>
