--- a/app/src/main/res/layout/activity_item_update.xml
+++ b/app/src/main/res/layout/activity_item_update.xml
@@ -34,13 +34,15 @@
         android:id="@+id/btnUpdateItem"
         android:layout_width="300dp"
         android:layout_height="60dp"
-        android:layout_marginBottom="316dp"
+        android:layout_marginBottom="36dp"
         android:text="Update item"
         android:textAlignment="center"
         android:textAllCaps="false"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.509"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintHorizontal_bias="0.495"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/etItemName"
+        app:layout_constraintVertical_bias="0.14" />
 </androidx.constraintlayout.widget.ConstraintLayout>
