--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.dashboard.DashboardFragment"
-    android:background="@color/background">
+    android:background="@color/background"
+    android:orientation="vertical">
 
     <LinearLayout
         android:id="@+id/linearLayout2"
@@ -45,48 +46,51 @@
 
     </LinearLayout>
 
-    <Button
-        android:id="@+id/btnTag"
-        android:layout_width="170dp"
-        android:layout_height="170dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="20dp"
-        android:shadowColor="@color/shadow"
-        android:text="Tag"
-        android:textAllCaps="false"
-        android:textColor="#686868"
-        app:backgroundTint="@color/white"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginTop="20dp">
 
-    <Button
-        android:id="@+id/btnGrocery"
-        android:layout_width="170dp"
-        android:layout_height="170dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginTop="20dp"
-        android:backgroundTint="@color/white"
-        android:shadowColor="@color/shadow"
-        android:text="Grocery"
-        android:textAllCaps="false"
-        android:textColor="#686868"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.733"
-        app:layout_constraintStart_toEndOf="@+id/btnTag"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />
+        <Button
+            android:id="@+id/btnTag"
+            android:layout_width="170dp"
+            android:layout_height="170dp"
+            android:layout_marginStart="20dp"
+            android:shadowColor="@color/shadow"
+            android:text="Tag"
+            android:textAllCaps="false"
+            android:textColor="#686868"
+            app:backgroundTint="@color/white" />
+
+        <View
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_weight="1"/>
+
+        <Button
+            android:id="@+id/btnGrocery"
+            android:layout_width="170dp"
+            android:layout_height="170dp"
+            android:layout_marginEnd="20dp"
+            android:backgroundTint="@color/white"
+            android:shadowColor="@color/shadow"
+            android:text="Grocery"
+            android:textAllCaps="false"
+            android:textColor="#686868" />
+    </LinearLayout>
+
 
     <Button
         android:id="@+id/btnStatistic"
         android:layout_width="170dp"
         android:layout_height="170dp"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="20dp"
         android:layout_marginTop="16dp"
         android:backgroundTint="@color/white"
         android:shadowColor="@color/shadow"
         android:text="Statistic"
         android:textAllCaps="false"
-        android:textColor="#686868"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnTag" />
+        android:textColor="#686868"/>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
